common/force-app/main/default/objects/Membership_Renewal__c/Membership_Renewal__c.object-meta.xml
<CustomObject>
    <label>Membership Renewal</label>
    <nameField>
        <displayFormat>MRN-{0000000}</displayFormat>
        <label>Membership Renewal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Renewals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>