common/force-app/main/default/objects/Membership_Renewal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Application__r.Account__r.FirstName + &apos; &apos; +  Application__r.Account__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>