common/force-app/main/default/objects/Membership_Renewal__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Membership Renewals</relationshipLabel>
    <relationshipName>Membership_Renewals</relationshipName>
    <type>Lookup</type>
</CustomField>