common/force-app/main/default/objects/Membership_Renewal__c/fields/Eligible_Start_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Start_Renewal_Date__c</fullName>
    <label>Eligible Start/Renewal Date</label>
    <type>Date</type>
</CustomField>