common/force-app/main/default/objects/Membership_Renewal__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Membership Renewals</relationshipLabel>
    <relationshipName>Membership_Renewals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>