common/force-app/main/default/objects/Membership_Renewal__c/fields/Membership_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Approved_Date__c</fullName>
    <label>Membership Approved Date</label>
    <type>Date</type>
</CustomField>