common/force-app/main/default/objects/Membership_Renewal__c/fields/Membership_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Declined_Date__c</fullName>
    <label>Membership Declined Date</label>
    <type>Date</type>
</CustomField>