common/force-app/main/default/objects/Membership_Renewal__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <inlineHelpText>Please enter in months only</inlineHelpText>
    <label>Term in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>